test/samples/invalid/resolving/arg_repeat.maruir
fun foo(a: uint8, a:int16)